[gd_scene load_steps=9 format=3 uid="uid://emtmjwq7om05"]

[ext_resource type="Script" uid="uid://bnmqm2yefx4ve" path="res://script/furnace.gd" id="1_5e7u4"]
[ext_resource type="FontFile" uid="uid://bkdi44swjm0sp" path="res://assets/Font Text/toxigenesis bd.otf" id="3_6y41g"]
[ext_resource type="Texture2D" uid="uid://svrjcnfsbqbs" path="res://assets/Pirolisis dan platform.png" id="4_g8m4t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g8m4t"]
radius = 207.87015

[sub_resource type="AtlasTexture" id="AtlasTexture_rl2nk"]
atlas = ExtResource("4_g8m4t")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic1dd"]
atlas = ExtResource("4_g8m4t")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6rvp"]
atlas = ExtResource("4_g8m4t")
region = Rect2(0, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_580vb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rl2nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6rvp")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="Furnace" type="Node2D"]
script = ExtResource("1_5e7u4")

[node name="Area_Furnace" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Area_Furnace_Collision" type="CollisionShape2D" parent="Area_Furnace"]
shape = SubResource("CircleShape2D_g8m4t")

[node name="Press[O]" type="Control" parent="."]
visible = false
z_index = 20
layout_mode = 3
anchors_preset = 0
offset_left = -28.0
offset_top = 239.0
offset_right = 12.0
offset_bottom = 279.0

[node name="Label" type="Label" parent="Press[O]"]
z_index = 25
layout_mode = 0
offset_left = -59.999996
offset_top = -132.0
offset_right = 721.0
offset_bottom = -59.0
scale = Vector2(0.48308468, 0.5673972)
theme_type_variation = &"HeaderSmall"
theme_override_fonts/font = ExtResource("3_6y41g")
theme_override_font_sizes/font_size = 30
text = "PRESS [O] TO PICK UP"

[node name="BurnProgress" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="BurnProgress"]
modulate = Color(1, 0.5, 0, 1)
layout_mode = 0
offset_left = 100.0
offset_top = -100.0
offset_right = 120.0
fill_mode = 3
show_percentage = false

[node name="Label" type="Label" parent="BurnProgress"]
layout_mode = 0
offset_left = -50.0
offset_top = -110.0
offset_right = 50.0
offset_bottom = -87.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "0 / 0"
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_580vb")
autoplay = "default"
frame_progress = 0.6176984

[connection signal="area_entered" from="Area_Furnace" to="." method="_on_area_furnace_area_entered"]
[connection signal="area_exited" from="Area_Furnace" to="." method="_on_area_furnace_area_exited"]
